Changed the structure of auth

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ GOOGLE_SECRET=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
 
 GITHUB_ID=bf848af50f98c932cd74
 GITHUB_SECRET=dd404132e9f16b8dd721e55a4b8cb6e4a8cdbcc4
+
+DATABASE_URL="mongodb+srv://denys:denys18@cluster0.rp5yyor.mongodb.net/blog?retryWrites=true&w=majority"
