added some important features

--- a/.env
+++ b/.env
@@ -9,6 +9,4 @@ GITHUB_SECRET=dd404132e9f16b8dd721e55a4b8cb6e4a8cdbcc4
 
 DATABASE_URL="mongodb+srv://denys:denys18@cluster0.rp5yyor.mongodb.net/blog?retryWrites=true&w=majority"
 
-
-
-
+PROCESS_API_KEY=AIzaSyCcTUP-7JwKWCyFkNqCQNCn1fiIS1OUFW0
