--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^10.4.0",
     "mongoose": "6.11.1",
     "next": "13.4.12",
     "next-auth": "^4.23.1",
